deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shrimp-demo-ui
  # namespace: prod
  labels:
    app: shrimp-demo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shrimp-demo-ui
  # 发布策略-平滑发布
  strategy:
    # type: Recreate
    type: RollingUpdate # 资源不足，不能用滚动方式
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: shrimp-demo-ui
    spec:
      imagePullSecrets:
        # 阿里云 Secrets
        - name: aliyun
      containers:
        - name: shrimp-demo-ui
          # 镜像， flow 会替换此变量
          image: ${IMAGE}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shrimp-demo-ui-svc
  # namespace: prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http-80
  selector:
    app: shrimp-demo-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # namespace: prod
  name: shrimp-demo-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "auth.uat.wkclz.com,mdm.uat.wkclz.com,gen.uat.wkclz.com,tool.uat.wkclz.com,cms.uat.wkclz.com,pms.uat.wkclz.com,k8s.uat.wkclz.com,flow.uat.wkclz.com"
spec:
  ingressClassName: nginx
  rules:
    - host: cas.uat.wkclz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shrimp-demo-ui-svc
                port:
                  number: 80
